--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "beinglog",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch --env-file .env src/server.ts",
     "test:dev1": "set NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll --runInBand",
     "test:dev": "jest --watchAll",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsup src --out-dir build",
+    "start": "node build/server.js"
   },
   "keywords": [],
   "author": "Bruno Andrade",
@@ -32,6 +37,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsup": "^8.3.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
