--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
+  },
+  "tsup": {
+    "entry": ["src", "!src/**/*.spec.ts"],
+    "outDir": "build",
+    "target": "es2022"
   }
 }
