--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
-    "tsup": "^8.5.0",
     "supertest": "^7.0.0",
+    "tsup": "^8.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.6",
@@ -42,7 +44,10 @@
     "typescript": "^5.5.4"
   },
   "tsup": {
-    "entry": ["src", "!src/**/*.spec.ts"],
+    "entry": [
+      "src",
+      "!src/**/*.spec.ts"
+    ],
     "outDir": "build",
     "target": "es2022"
   }
